2002-02-03 Bruno Coudoin <bruno.coudoin@free.fr>

	* POTFILES.in: Added railroad.xml.in

2002-01-24 Bruno Coudoin <bruno.coudoin@free.fr>

	* fr.po: Updated French translation

2002-01-14  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2002-01-09  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Sorted and added missing files.
	* sv.po: Updated Swedish translation.

2002-01-06  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: Updated French translation.

2002-01-05  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-12-31  Vasif Ismailogu MD  <azerb_linux@hotmail.com>

	* az.po: Updated Azerbaijani translation file
	
2001-12-28  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-12-22  Vasif Ismailogu MD  <azerb_linux@hotmail.com>

	* az.po: updating Azerbaijani translation file

2001-12-14  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Updated Greek translation.

2001-12-09  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Translation done by Anonymous (AARG).
	* el.po: Added Greek translation.

2001-12-09  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-11-27  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-11-24  Valek Filippov  <frob@df.ru>

	* ru.po: added russian translation.

2001-11-17  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-11-15  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-11-09  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: Updated French translation.

2001-11-06  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Sorted.
	* sv.po: Fixed Swedish translation. Thanks to
	Gran Uddeborg <goeran@uddeborg.pp.se> for his review.

2001-11-05  Christian Rose  <menthos@menthos.com>

	* sv.po: Added Swedish translation.
	* POTFILES.in: Sorted.
	* .cvsignore: Added this file.
