@@ -1,3 +1,8 @@
+2002-02-04 Bruno Coudoin <bruno.coudoin@free.fr>
+
+	* Makefile.in.in: Taken from gnome-media-1.112.0/po to use intltool
+	* properly
+
 2002-02-03 Bruno Coudoin <bruno.coudoin@free.fr>
 
 	* POTFILES.in: Added railroad.xml.in
